# cde_to_vector

./: .gitignore  CITATIONS.md  LICENSE  PROJECT_STRUCTURE.md  README.md  config.yaml  demo_pipeline.py  demo_raster.py  pyproject.toml  requirements.txt  run_pipeline.py  run_unified_pipeline.py
data/processed/: sample_test.pt
src/extractors/: __init__.py  filter.py  inkscape_wrapper.py
src/geometry/: __init__.py  bezier_converter.py  normalizer.py
src/pipeline/: __init__.py  latent_standardizer.py  unified_pipeline.py
src/raster/: __init__.py  image_preprocessor.py  raster_pipeline.py  resnet_encoder.py
src/tensor/: __init__.py  serializer.py
src/utils/: __init__.py  logger.py  validators.py
tests/: conftest.py  test_corner_cases.py  test_image_preprocessor.py  test_validators.py
